Fixed mobile nav alignment

--- a/sass/partials/_media.scss
+++ b/sass/partials/_media.scss
@@ -23,8 +23,7 @@
 			// text-align: center;
 		}
 		ul li a{
-			text-indent: 0;
-			text-align: center;
+			text-indent: 30%;
 		}
 	}
 	#main-header{height: 450px;}
